--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -51,3 +51,17 @@ h2 {
   font-weight: 700;
   line-height: 1.2;
 }
+
+
+
+ul {
+  padding-left: 2rem;
+  list-style: none;
+}
+
+li::before {
+    content: "– ";
+    width: 2rem;
+    margin-left: -2rem;
+    display: inline-block;
+}
